--- a/angular/src/index.html
+++ b/angular/src/index.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
     <head prefix="og: http://ogp.me/ns#">
         <meta charset="utf-8" />
-        <title>AbpZeroTemplate</title>
+        <title>Restaurant management app</title>
         <base href="/" />
 
-        <meta property="og:title" content="AbpZeroTemplate" />
+        <meta property="og:title" content="Restaurant management app" />
         <meta property="og:image" content="" />
         <meta property="og:description" content="Base solution for your next web application" />
         <meta property="og:url" content="" />
